# miner

./: CMakeLists.txt
doc/: Doxyfile
src/: CMakeLists.txt  action.cpp  action.h  actionmanager.cpp  actionmanager.h  build.h.in  config.cpp  config.h  glcamera.cpp  glcamera.h  glcube.cpp  glcube.h  gldefine.h  glprogram.cpp  glprogram.h  glscene.cpp  glscene.h  glshader.cpp  glshader.h  gltexture.cpp  gltexture.h  glwindow.cpp  glwindow.h  input.cpp  input.h  log.h  main.cpp  motionstate.cpp  motionstate.h
src/shaders/: CMakeLists.txt  shader.frag  shader.vert
src/textures/: CMakeLists.txt
src/textures/source/: stone.xcf
